# elspeth

./: .contracts-whitelist.yaml  .dockerignore  .filigree.conf  .filigree.conf.imported  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PLUGIN.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SUPPORT.md  USER_MANUAL.md  bug_list_1406.md  clarion.yaml  index.html  package-lock.json  package.json  pyproject.toml  vulture_whitelist.py
elspeth-lints/: README.md  pyproject.toml
elspeth-lints/src/elspeth_lints/: __init__.py
elspeth-lints/src/elspeth_lints/core/: __init__.py  allowlist.py  allowlist_governance.py  allowlist_io.py  ast_walker.py  atomic_io.py  bundle_verify.py  cli.py  findings.py  fixture_harness.py  judge.py  judge_coverage.py  judge_quality.py  judge_signature_diagnosis.py  judge_signature_signing.py  override_rate.py  protocols.py  reaudit.py  reaudit_sidecar.py  registry.py  review_bundle.py  source_excerpt.py  tier_model_scan.py  trust_boundary_diff.py
elspeth-lints/src/elspeth_lints/core/emitters/: __init__.py  github.py  json.py  sarif.py  text.py
elspeth-lints/src/elspeth_lints/mcp/: __init__.py  __main__.py  server.py
elspeth-lints/src/elspeth_lints/rules/: __init__.py  meta_no_new_bespoke_cicd_enforcer.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/: __init__.py  shared.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/audit_evidence_nominal/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/audit_evidence_nominal/fixtures/examples_violation/: 01_to_audit_dict.expected.json
elspeth-lints/src/elspeth_lints/rules/audit_evidence/guard_symmetry/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/guard_symmetry/fixtures/examples_violation/: 01_missing_loader_guard.expected.json
elspeth-lints/src/elspeth_lints/rules/audit_evidence/gve_attribution/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/gve_attribution/fixtures/examples_violation/: 01_missing_component_id.expected.json  03_component_id_none.expected.json
elspeth-lints/src/elspeth_lints/rules/audit_evidence/tier_1_decoration/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/audit_evidence/tier_1_decoration/fixtures/examples_violation/: 01_missing_marker.expected.json  02_missing_caller_module.expected.json  03_missing_reason.expected.json
elspeth-lints/src/elspeth_lints/rules/composer/: __init__.py
elspeth-lints/src/elspeth_lints/rules/composer/catch_order/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/composer/catch_order/fixtures/examples_violation/: 01_inverted_order.expected.json
elspeth-lints/src/elspeth_lints/rules/composer/exception_channel/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/composer/exception_channel/fixtures/examples_violation/: 01_bare_value_error.expected.json
elspeth-lints/src/elspeth_lints/rules/contract_invariants/: __init__.py
elspeth-lints/src/elspeth_lints/rules/contract_invariants/portable_sqlite_insert/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/contract_invariants/portable_sqlite_insert/fixtures/examples_violation/: 01_sqlite_only.expected.json  02_misbound_dialect_branch.expected.json  03_module_attribute_evasion.expected.json
elspeth-lints/src/elspeth_lints/rules/contract_invariants/session_engine_factory/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/contract_invariants/session_engine_factory/fixtures/examples_violation/: 01_sessions_bare_create_engine.expected.json  02_web_session_url.expected.json
elspeth-lints/src/elspeth_lints/rules/contract_invariants/validation_theatre/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/contract_invariants/validation_theatre/fixtures/examples_violation/: 01_deferred_success.expected.json
elspeth-lints/src/elspeth_lints/rules/immutability/: __init__.py  shared.py
elspeth-lints/src/elspeth_lints/rules/immutability/freeze_guards/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/immutability/freeze_guards/fixtures/examples_violation/: 01_mapping_proxy.expected.json  (+2 more)
elspeth-lints/src/elspeth_lints/rules/immutability/frozen_annotations/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/manifest/: __init__.py
elspeth-lints/src/elspeth_lints/rules/manifest/contract_manifest/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/manifest/symbol_inventory/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/manifest/test_to_source_mapping/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/meta_no_new_bespoke_cicd_enforcer/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/meta_no_new_bespoke_cicd_enforcer/fixtures/examples_violation/: 01_unmanifested_enforcer.expected.json
elspeth-lints/src/elspeth_lints/rules/plugin_contract/: __init__.py
elspeth-lints/src/elspeth_lints/rules/plugin_contract/component_type/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/plugin_contract/options_metadata/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/plugin_contract/plugin_hashes/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/trust_boundary/: __init__.py  shared.py
elspeth-lints/src/elspeth_lints/rules/trust_boundary/scope/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/trust_boundary/tests/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/trust_boundary/tier/: __init__.py  metadata.py  rule.py
elspeth-lints/src/elspeth_lints/rules/trust_tier/: __init__.py
elspeth-lints/src/elspeth_lints/rules/trust_tier/tier_model/: __init__.py  metadata.py  rotate.py  rule.py  scope_fingerprint.py  trust_boundary_suppress.py
(+4579 files in other folders)
