[project]
name = "elspeth-lints"
version = "0.1.0"
description = "Workspace-only static analyzer for ELSPETH-specific CI invariants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0,<7"]

[project.scripts]
elspeth-lints = "elspeth_lints.core.cli:main"

[project.entry-points."elspeth_lints.rules"]
meta-no-new-bespoke-cicd-enforcer = "elspeth_lints.rules.meta_no_new_bespoke_cicd_enforcer:RULE"
plugin-contract-options-metadata = "elspeth_lints.rules.plugin_contract.options_metadata:RULE"
immutability-freeze-guards = "elspeth_lints.rules.immutability.freeze_guards:RULE"
immutability-frozen-annotations = "elspeth_lints.rules.immutability.frozen_annotations:RULE"
# Rule entry points are added by migration tasks.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elspeth_lints"]
